--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <link   rel="preload prefetch"              href="https://fonts.gstatic.com/s/materialsymbolsrounded/v74/sykg-zNym6YjUruM-QrEh7-nyTnjDwKNJ_190Fjzag.woff2" as="font" type="font/woff2" crossorigin onload="clgenld()">
         
         <!-- CSS and JS -->
-        <script type="text/javascript"              src="https://lib.plutonny.ru/plutonny.js/v1.1.js?cache=20.05.2023-v300-b22"></script>
-        <link   rel="preload prefetch stylesheet"   href="static/main.css?cache=20.05.2023-v300-b22" as="style">
-        <link   rel="icon"                          href="static/g-icon.png?cache=20.05.2023-v300-b22">
-        <link   rel="apple-touch-icon"              href="pwa-icon-apple.png?cache=20.05.2023-v300-b22">
+        <script type="text/javascript"              src="https://lib.plutonny.ru/plutonny.js/v1.1.js?cache=04.06.2023-v300-b23"></script>
+        <link   rel="preload prefetch stylesheet"   href="static/main.css?cache=04.06.2023-v300-b23" as="style">
+        <link   rel="icon"                          href="static/g-icon.png?cache=04.06.2023-v300-b23">
+        <link   rel="apple-touch-icon"              href="pwa-icon-apple.png?cache=04.06.2023-v300-b23">
         <style  id="theming"                        ></style>
         <style  id="animationEngine"                ></style>
 
@@ -67,7 +67,7 @@
             "use strict";
             
             var siteVersion = '3.0'
-            var siteBuild = '22'
+            var siteBuild = '23'
 
             var DATESTATIC = new Date()
             let DYNAMICTIME = new Date()
@@ -238,7 +238,7 @@
                     return `${(parseFloat(parseInt(p * 10)) % 10) > 7 ? parseInt(p + 1) : parseInt(p)}&nbsp;%`
                 },
                 fastDay: function(START, END) {
-                    return Math.floor(((END - START) / 1000 / 60 / 60 / 24))
+                    return Math.floor(((END - START) / 1000 / 60 / 60 / 24)) + 1
                 },
                 general: {
                     percents: function(START, END, textPROCESS) {
@@ -255,19 +255,16 @@
                             let rs  = Math.floor(r)
 
                             document.querySelector('#textGeneral').innerHTML = `
-                            <p class="bold" style="font-size: 20px; margin: 14px 0 8px 6px;">${textPROCESS}:</p>
+                            <p class="bold" style="font-size: 20px; margin: 14px 0 8px 0;">${textPROCESS}:</p>
                             <p style="margin: 18px 0 0 0; font-size: 14px;">
-                                ${plutonny.UI.rus('day', rd)}, 
-                                ${plutonny.UI.rus('hour', rh)}, 
-                                ${plutonny.UI.rus('minute', rm)},
-                                ${plutonny.UI.rus('second', rs)}
+                                ${plutonny.UI.rus('day', rd)},&nbsp;${plutonny.UI.rus('hour', rh)},&nbsp;${plutonny.UI.rus('minute', rm)},&nbsp;${plutonny.UI.rus('second', rs)}
                             </p>`
 
                             let pd100 = (START - DYNAMICTIME) / (START - END) * 100
                             let pm100 = parseFloat(parseInt((pd100 * 1000) + 1)) / 1000
 
                             document.querySelector('#counterGenPer').innerHTML = `${pm100} %`
-                            document.querySelector('#counterGenLine').style.width = `${((document.body.clientWidth - 36 - 48) / 100) * pm100}px`
+                            document.querySelector('#counterGenLine').style.width = `${(((document.body.clientWidth >= 540 ? 440 : document.body.clientWidth) - 36 - 48) / 100) * pm100}px`
                         }
                     },
                     week: function(START, END) {
@@ -281,8 +278,8 @@
 
                             let rw  = Math.floor((r / 60 / 60 / 24 / 7) * 100) / 100
                             document.querySelector('#weekPer').innerHTML = plutonny.UI.rus('week', rw)
-                            document.querySelector('#weekLine').style.width = `${((document.body.clientWidth - 36 - 48) / 100) * Math.floor((rmm % 1)*100)}px`
-                            document.querySelector('#dayLine').style.width = `${((document.body.clientWidth - 36 - 48) / 100) * Math.floor((rw % 1)*100)}px`
+                            document.querySelector('#weekLine').style.width = `${(((document.body.clientWidth >= 540 ? 440 : document.body.clientWidth) - 36 - 48) / 100) * Math.floor((rmm % 1)*100)}px`
+                            document.querySelector('#dayLine').style.width = `${(((document.body.clientWidth >= 540 ? 440 : document.body.clientWidth) - 36 - 48) / 100) * Math.floor((rw % 1)*100)}px`
                         }
                     },
                     day: function(START, END) {
@@ -292,7 +289,7 @@
 
                             let rd  = Math.floor((r / 60 / 60 / 24) * 100) / 100
                             document.querySelector('#dayPer').innerHTML = plutonny.UI.rus('day', rd)
-                            document.querySelector('#hourLine').style.width = `${((document.body.clientWidth - 36 - 48) / 100) * Math.floor((rd % 1)*100)}px`
+                            document.querySelector('#hourLine').style.width = `${(((document.body.clientWidth >= 540 ? 440 : document.body.clientWidth) - 36 - 48) / 100) * Math.floor((rd % 1)*100)}px`
                         }
 
                     },
@@ -303,7 +300,7 @@
 
                             let rh  = Math.floor((r / 60 / 60) * 100) / 100
                             document.querySelector('#hourPer').innerHTML = plutonny.UI.rus('hour', rh)
-                            document.querySelector('#minuteLine').style.width = `${((document.body.clientWidth - 36 - 48) / 100) * Math.floor((rh % 1)*100)}px`
+                            document.querySelector('#minuteLine').style.width = `${(((document.body.clientWidth >= 540 ? 440 : document.body.clientWidth) - 36 - 48) / 100) * Math.floor((rh % 1)*100)}px`
                         }
 
                     },
@@ -314,7 +311,7 @@
 
                             let rm  = Math.floor((r / 60) * 100) / 100
                             document.querySelector('#minutePer').innerHTML = plutonny.UI.rus('minute', rm)
-                            document.querySelector('#secondLine').style.width = `${((document.body.clientWidth - 36 - 48) / 100) * Math.floor((rm % 1)*100)}px`
+                            document.querySelector('#secondLine').style.width = `${(((document.body.clientWidth >= 540 ? 440 : document.body.clientWidth) - 36 - 48) / 100) * Math.floor((rm % 1)*100)}px`
                         }
 
                     },
@@ -517,7 +514,14 @@
                         `)
                         document.querySelector('#textGeneral').style.opacity = 1
                         let injEvent = ''
-                        for (let i = 1; i <= counters.count; i++) injEvent += UI.event('large', counters[i], i)
+                        for (let i = 1; i <= counters.count; i++) {
+                            let cd
+                            if (counters[i].date == undefined) { 
+                                cd = new Date(`${counters[i].Edate} ${counters[i].Etime}`)
+                                if (DATESTATIC <= cd) injEvent += UI.event('large', counters[i], i)
+                            }
+                            else injEvent += UI.event('large', counters[i], i)
+                        }
                         plutonny.output('contentOt', `
                         <p class="bold" style="font-size: 32px; margin: 0; padding-left: 6px;">все события:</p>
                         <div style="height: 24px;"></div>
@@ -574,12 +578,21 @@
                     </div>
                     `)
                     animationEngine.Rop0('counterAddAll')
-                    animationEngine.width('counterGenPer', 'calc(100vw - 36px - 48px) !important')
-                    animationEngine.width('weekPer', 'calc(100vw - 36px - 48px) !important')
-                    animationEngine.width('dayPer', 'calc(100vw - 36px - 48px) !important')
-                    animationEngine.width('hourPer', 'calc(100vw - 36px - 48px) !important')
-                    animationEngine.width('minutePer', 'calc(100vw - 36px - 48px) !important')
-                    animationEngine.width('secondPer', 'calc(100vw - 36px - 48px) !important')
+                    if (document.body.clientWidth >= 540) {
+                        animationEngine.width('counterGenPer', 'calc(440px - 36px - 48px) !important')
+                        animationEngine.width('weekPer', 'calc(440px - 36px - 48px) !important')
+                        animationEngine.width('dayPer', 'calc(440px - 36px - 48px) !important')
+                        animationEngine.width('hourPer', 'calc(440px - 36px - 48px) !important')
+                        animationEngine.width('minutePer', 'calc(440px - 36px - 48px) !important')
+                        animationEngine.width('secondPer', 'calc(440px - 36px - 48px) !important')
+                    } else {
+                        animationEngine.width('counterGenPer', 'calc(100vw - 36px - 48px) !important')
+                        animationEngine.width('weekPer', 'calc(100vw - 36px - 48px) !important')
+                        animationEngine.width('dayPer', 'calc(100vw - 36px - 48px) !important')
+                        animationEngine.width('hourPer', 'calc(100vw - 36px - 48px) !important')
+                        animationEngine.width('minutePer', 'calc(100vw - 36px - 48px) !important')
+                        animationEngine.width('secondPer', 'calc(100vw - 36px - 48px) !important')
+                    }
                     fetch(`/DBCOUNT.json?t=${DATESTATIC.getTime()}`).then(function (response) { return response.json() }).then(async function (counters) {
                         if (counters[id].type == 'dayInYear') {
                             DYNAMICTIME = new Date()
@@ -751,17 +764,17 @@
                     document.querySelector('#textGeneral').style.opacity = 0
                     animationEngine.op0('counterAddAll')
                     animationEngine.op0('counterGenPer')
-                    animationEngine.width('counterGenLine', '0px !important')
-                    await plutonny.sleep(30)
-                    animationEngine.width('weekLine', '0px !important')
-                    await plutonny.sleep(30)
-                    animationEngine.width('dayLine', '0px !important')
-                    await plutonny.sleep(30)
-                    animationEngine.width('hourLine', '0px !important')
+                    animationEngine.width('secondLine', '0px !important')
                     await plutonny.sleep(30)
                     animationEngine.width('minuteLine', '0px !important')
                     await plutonny.sleep(30)
-                    animationEngine.width('secondLine', '0px !important')
+                    animationEngine.width('hourLine', '0px !important')
+                    await plutonny.sleep(30)
+                    animationEngine.width('dayLine', '0px !important')
+                    await plutonny.sleep(30)
+                    animationEngine.width('weekLine', '0px !important')
+                    await plutonny.sleep(30)
+                    animationEngine.width('counterGenLine', '0px !important')
                     await plutonny.sleep(100)
                     animationEngine.op0('blockAdd')
                     await plutonny.sleep(100)
